前两天前端知识汇总

--- a/fullstack/week6/html.html
+++ b/fullstack/week6/html.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <!--<meta http-equiv="Refresh" content="3;URL=https://www.baidu.com">-->
+
+    <title>Yang</title>
+    <link rel="icon" href="https://www.jd.com/favicon.ico">
 </head>
 <body>
     <h1 style="color:red">hello world</h1>
+
+白首方悔读书迟<br/>
+一分辛苦一分才
+
+<p>白首方悔读书迟</p>
+<P>一分辛苦一分才</P>
+
 </body>
 </html>
