--- a/fullstack/week7/css的属性一.html
+++ b/fullstack/week7/css的属性一.html
@@ -23,28 +23,28 @@
 
 
         /*背景属性*/
-        /*#div1{*/
-        /*    height: 5000px;*/
-        /*    width: 300px;*/
-        /*    background: url("b219ebc4b74543a93274875a18178a82b901143c.jpg") no-repeat 10px 10px red;*/
-        /*}*/
+        #div1{
+            height: 5000px;
+            width: 300px;
+            background: url("b219ebc4b74543a93274875a18178a82b901143c.jpg") no-repeat 10px 10px red;
+        }
 
 
 
         /*文本属性*/
-        p{
-            background-color: red;
-            /*字体居中*/
-            text-align: center;
-            /*字体行的高度*/
-            line-height: 100px;
-            /*字体间距*/
-            letter-spacing:5px;
-            /*单词之间的距离*/
-            word-spacing:10px;
-            /*单词的首字母大写*/
-            text-transform:capitalize;
-        }
+        /*p{*/
+        /*    background-color: red;*/
+        /*    !*字体居中*!*/
+        /*    text-align: center;*/
+        /*    !*字体行的高度*!*/
+        /*    line-height: 100px;*/
+        /*    !*字体间距*!*/
+        /*    letter-spacing:5px;*/
+        /*    !*单词之间的距离*!*/
+        /*    word-spacing:10px;*/
+        /*    !*单词的首字母大写*!*/
+        /*    text-transform:capitalize;*/
+        /*}*/
 
     </style>
 </head>
