--- a/fullstack/week7/css的属性操作二.html
+++ b/fullstack/week7/css的属性操作二.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        /*这是body的外边距*/
+        body{
+            margin: 0;
+        }
+        .div1{
+            border:solid 5px blue;
+            height:200px;
+            width: 200px;
+            background-color: red;
+            /*margin:10px;*/
+        }
+        .div2{
+            border:solid 5px blue;
+            height:200px;
+            width: 200px;
+            background-color: yellow;
+            margin: 10px;
+        }
+        .div3{
+            border:solid 5px blue;
+            height:200px;
+            width: 200px;
+            background-color: black
+        ;
+        }
+
+    </style>
 </head>
 <body>
+    <div class="div1"></div>
+    <div class="div2"></div>
+    <div class="div3"></div>
 
 </body>
 </html>
