--- a/fullstack/week7/float.html
+++ b/fullstack/week7/float.html
@@ -8,7 +8,7 @@
     正常文档流：将元素（标签）在进行排版布局的时候按着 从上到下  从做到右的顺序排版的一个布局流
     脱离文档流：将元素从文档流中取出，进行覆盖，其他元素会按文档流中不存在该元素 重新布局
     float: 浮动（非完全脱离）
-    position:adsolute  fixed (完全脱离)
+    position:adsolute  fixed (完全脱离)   relative
 
 
 </body>
